--- a/style.css
+++ b/style.css
@@ -61,3 +61,8 @@ label {
     box-shadow: 4px 4px 0 #000;
     transform: translate(-4px, -4px);
 }
+
+.erroe {
+    color: red;
+    font-size: 5px;
+}
