--- a/style.css
+++ b/style.css
@@ -17,6 +17,12 @@ body {
     align-items: center;
 }
 
+form {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
 input,
 label {
     display: block;
@@ -62,7 +68,7 @@ label {
     transform: translate(-4px, -4px);
 }
 
-.erroe {
+.error {
     color: red;
-    font-size: 5px;
+    font-size: 12px;
 }
