--- a/style.css
+++ b/style.css
@@ -11,10 +11,14 @@ body {
     box-shadow: 10px 8px 0px #7c9eb7;
     width: 300px;
     padding: 50px;
-    margin: 50px;
+    margin: 50px 25px;
     display: flex;
     flex-direction: column;
     align-items: center;
+}
+
+#homecont {
+    width: 100%;
 }
 
 form {
@@ -26,6 +30,7 @@ form {
 input,
 label {
     display: block;
+    white-space: nowrap;
 }
 
 .textbox {
