--- a/style.css
+++ b/style.css
@@ -89,10 +89,45 @@ label {
 #logout {
     position: absolute;
     top: 0;
-    right: 0;
+    left: 0;
     margin: 10px;
     height: 20px;
     width: 100px;
+}
+
+.navbar {
+    position: absolute;
+    top: 0;
+    left: 0;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    background-color: #7c9eb7;
+    width: 200px;
+    height: 100%;
+}
+
+.navbar .button {
+    background-color: #c5d6db;
+    width: 150px;
+}
+
+.menu-icon {
+    align-self: flex-start;
+    padding: 12px 16px;
+    margin: 13px;
+    width: 30px;
+    height: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+}
+
+.line {
+    width: 100%;
+    height: 4px;
+    background-color: #333;
 }
 
 #app {
