--- a/style.css
+++ b/style.css
@@ -77,24 +77,6 @@ label {
     transform: translate(-4px, -4px);
 }
 
-#home {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 10px;
-    height: 20px;
-    width: 100px;
-}
-
-#logout {
-    position: absolute;
-    top: 0;
-    left: 0;
-    margin: 10px;
-    height: 20px;
-    width: 100px;
-}
-
 .navbar {
     position: absolute;
     top: 0;
@@ -110,6 +92,11 @@ label {
 .navbar .button {
     background-color: #c5d6db;
     width: 150px;
+}
+
+.sticky {
+    position: fixed;
+    top: 0;
 }
 
 .menu-icon {
@@ -128,6 +115,10 @@ label {
     width: 100%;
     height: 4px;
     background-color: #333;
+}
+
+#logout {
+    justify-self: end;
 }
 
 #app {
