--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@ label {
     transform: translate(-4px, -4px);
 }
 
-.navbar {
+#navbar {
     position: absolute;
     top: 0;
     left: 0;
@@ -85,13 +85,16 @@ label {
     flex-direction: column;
     align-items: center;
     background-color: #7c9eb7;
-    width: 200px;
+    width: 50px;
     height: 100%;
+    transition: all 0.5s;
 }
 
-.navbar .button {
+#navbar a {
+    display: none;
     background-color: #c5d6db;
     width: 150px;
+    transition: all 0.5s;
 }
 
 .sticky {
@@ -99,10 +102,9 @@ label {
     top: 0;
 }
 
-.menu-icon {
+#menu-icon {
     align-self: flex-start;
-    padding: 12px 16px;
-    margin: 13px;
+    margin: 10px;
     width: 30px;
     height: 20px;
     display: flex;
@@ -115,10 +117,6 @@ label {
     width: 100%;
     height: 4px;
     background-color: #333;
-}
-
-#logout {
-    justify-self: end;
 }
 
 #app {
