--- a/style.css
+++ b/style.css
@@ -78,7 +78,7 @@ label {
 }
 
 #navbar {
-    position: absolute;
+    position: fixed;
     top: 0;
     left: 0;
     display: flex;
@@ -100,6 +100,7 @@ label {
 .sticky {
     position: fixed;
     top: 0;
+    left: 0;
 }
 
 #menu-icon {
