--- a/style.css
+++ b/style.css
@@ -86,13 +86,15 @@ label {
     align-items: center;
     background-color: #7c9eb7;
     width: 50px;
-    height: 100%;
+    height: 9999px;
     transition: all 0.5s;
 }
 
 #navbar a {
-    display: none;
+    display: flex;
     background-color: #c5d6db;
+    position: relative;
+    left: -200px;
     width: 150px;
     transition: all 0.5s;
 }
